[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://bullet generator/generator.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/PlayerGenerator.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.8082, 19.741 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 16
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GeneratorPlayer" parent="." instance=ExtResource( 2 )]
visible = false
script = ExtResource( 3 )

[node name="FireDelayTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
